Fix versions popup align

--- a/source/_static/css/frc-rtl.css
+++ b/source/_static/css/frc-rtl.css
@@ -21,7 +21,7 @@ body {
   float: right;
 }
 
-.wy-nav-side {
+.wy-nav-side, .rst-versions {
   right: 0;
   left: unset;
 }
@@ -30,18 +30,18 @@ body {
   margin-left: 0;
 }
 @media screen and (max-width: 768px) {
-  .wy-nav-side {
+  .wy-nav-side, .rst-versions {
     right: -300px;
   }
   .wy-nav-content-wrap {
     margin-right: 0;
   }
-  .wy-nav-side.shift {
+  .wy-nav-side.shift, .rst-versions.shift {
     right: 0;
     left: unset;
   }
   .wy-nav-content-wrap.shift {
-    right: 320px;
+    right: 85%;
     left: unset;
   }
 }
@@ -58,4 +58,14 @@ body {
 }
 .float-left {
   float: right;
+}
+
+.rst-versions .rst-current-version {
+  text-align: left;
+}
+.rst-versions .rst-current-version .fa-book, .rst-versions .rst-current-version .icon-book {
+  float: right;
+}
+.rst-other-versions {
+  text-align: right;
 }
